[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Graphics/batiments/love hotel.png" type="Texture" id=1]
[ext_resource path="res://src/Buildings/Nest/Nest.gd" type="Script" id=2]
[ext_resource path="res://src/UI/NestUI/NestUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Monster/Monster.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Graphics/Theme/theme_basic.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.6529, 94.4631 )

[node name="Nest" type="Node2D"]
position = Vector2( 285.078, 191.41 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
baby_monster = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 255, 255, 255, 1 )
self_modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ButtonBuild" type="Button" parent="."]
margin_left = -42.9124
margin_top = -18.3755
margin_right = 44.0876
margin_bottom = 18.6245
theme = ExtResource( 5 )
disabled = true
text = "BUILD (1 bones)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionUI" type="Position2D" parent="."]
position = Vector2( 135.208, -133.579 )

[node name="NestUI" parent="." instance=ExtResource( 3 )]
visible = false

[node name="ExitPosition" type="Position2D" parent="."]
position = Vector2( -78.7813, 105.252 )

[node name="Procreation" type="Timer" parent="."]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="pressed" from="ButtonBuild" to="." method="_on_ButtonBuild_pressed"]
[connection signal="timeout" from="Procreation" to="." method="_on_Procreation_timeout"]
